Feat: Implementando EF core e criando database.

--- a/Final.Api/appsettings.json
+++ b/Final.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;database=Final;user=sa;password=leo191102;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
