Feat: Implementando rotinas da interface visual da aplicação.

--- a/Final.Api/appsettings.json
+++ b/Final.Api/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "FrontendUrl": "http://localhost:5058",
+  "BackendUrl": "http://localhost:5018",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
